docs: update on mlp overfitting discussion

--- a/SD_MLP.ipynb
+++ b/SD_MLP.ipynb
@@ -3,7 +3,8 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "toc_visible": true
     },
     "kernelspec": {
       "name": "python3",
@@ -61,13 +62,13 @@
       "metadata": {
         "id": "gd-hHPDWIsAS"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "markdown",
       "source": [
-        "## Raw Data"
+        "## Raw data"
       ],
       "metadata": {
         "id": "rTozKiy7XCBG"
@@ -121,7 +122,7 @@
         "id": "XDuTS7IiXGKv",
         "outputId": "42c221be-4c84-4800-c0aa-8ec9d5d84421"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -158,7 +159,7 @@
         "id": "Er2Pnn1kZkzo",
         "outputId": "a9392e58-b90b-4c54-f102-424984000586"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -210,7 +211,7 @@
       "metadata": {
         "id": "Qz_8Lc0tbyxD"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -235,7 +236,7 @@
         "id": "TLNfshDGX_GK",
         "outputId": "3ddbd1f6-9b13-4f77-cc58-95b91a0737ee"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -287,7 +288,7 @@
       "metadata": {
         "id": "1zuSm0MqYJnk"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -313,7 +314,7 @@
         "id": "6GloXmNCacQM",
         "outputId": "ce0067bd-5481-4833-8783-7c204f79b0ff"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -369,7 +370,7 @@
       "metadata": {
         "id": "Zq4UVD95oJlu"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -396,7 +397,7 @@
         "id": "B9GX_7GtTL9d",
         "outputId": "342fd628-86d3-458e-e054-06341253c0c2"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -447,7 +448,7 @@
       "metadata": {
         "id": "YHaAyk5Xo72h"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -476,7 +477,7 @@
         "id": "yKWFHQxzo_YH",
         "outputId": "6d6e436d-39da-497c-9058-79d60e769dfb"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -504,7 +505,7 @@
         "id": "CRAhicI63yIo",
         "outputId": "b9a662db-92c1-4b84-9e9b-809442cd7491"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -615,7 +616,7 @@
       "metadata": {
         "id": "i2lbpbigpHqY"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -647,7 +648,7 @@
         "id": "sWDeWuMepLJz",
         "outputId": "e283ca31-5e41-4fda-a086-6efa3a9b2232"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -741,7 +742,7 @@
         "id": "CSRG2X2Ra9e_",
         "outputId": "f5e5dd33-a3d3-4ce1-9fc9-b1b1719914e1"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -774,7 +775,7 @@
         "id": "NNvXqpkHskK_",
         "outputId": "a6dc1069-3596-4840-a3e9-869dacdd1abc"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -822,7 +823,7 @@
         "id": "x8L3hegPpg0J",
         "outputId": "2024f0db-f92f-4715-baa7-8a0573352c09"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -854,7 +855,7 @@
         "id": "YXyHHd39pj3n",
         "outputId": "0a9eb0db-ef74-4160-e5c8-a2eabc3fe46e"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -873,7 +874,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## A word on Overfitting"
+        "## A first thought on Overfitting"
       ],
       "metadata": {
         "id": "p5JCXcFOks4S"
@@ -882,7 +883,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "In the following, I will defend the following propositions:\n",
+        "In the following, I will propose (needs further investigation) the following propositions:\n",
         "- The model's failure to improve on the validation set, despite increasing training set performance, suggests that it's not simply learning spurious patterns. Instead, it's struggling to capture the underlying concepts of the 'disagree' and 'discuss' classes. These classes are inherently complex and underrepresented across the three sets. Consequently, early stopping or regularization, while potentially mitigating overfitting, could also hinder the model's capacity (ability) to learn valuable patterns from the 'unrelated' and 'agree' classes, leading to lower overall performance.\n",
         "\n",
         "- Our empirical findings corroborate this, as we observed substantial performance degradation on both validation and testing sets when these techniques were applied."
