--- a/SD_BiLSTM.ipynb
+++ b/SD_BiLSTM.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "gpuType": "T4"
+      "gpuType": "T4",
+      "toc_visible": true
     },
     "kernelspec": {
       "name": "python3",
@@ -76,7 +77,7 @@
       "metadata": {
         "id": "MXI8hIO7RXdp"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -137,7 +138,7 @@
         "id": "UHvBzBq3Pv7O",
         "outputId": "43d4a45d-bfdc-4550-8add-f87a133cfc18"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -174,7 +175,7 @@
         "id": "1-cQ_grOTW2L",
         "outputId": "0c79e242-ecc9-46c4-c739-f8aef1f14325"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -259,7 +260,7 @@
       "metadata": {
         "id": "XnIRNj4uUJEw"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -292,7 +293,7 @@
       "metadata": {
         "id": "GMzoQNPHQp-F"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -318,7 +319,7 @@
         "id": "zSPVkWNSl74q",
         "outputId": "39980b3b-4524-4051-d88f-299c82cec1f3"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -382,7 +383,7 @@
         "id": "RUv2QkVfPxmH",
         "outputId": "5781bfb4-2a48-4c74-a018-ebb1dfe8ec27"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -434,7 +435,7 @@
       "metadata": {
         "id": "iqA6lTkrQdu3"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -470,7 +471,7 @@
         "id": "Umm6q1LWQmae",
         "outputId": "05b82fde-0021-43fa-aa1e-d9e87b0c59b0"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -503,7 +504,7 @@
         "id": "uIMGs7g4r9Mw",
         "outputId": "590f88c3-43dd-40e0-8dea-e21e16f9f4dd"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -611,7 +612,7 @@
       "metadata": {
         "id": "Yrox_SSDiJyl"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -631,7 +632,7 @@
       "metadata": {
         "id": "TSO0rSyQQovs"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -653,7 +654,7 @@
       "metadata": {
         "id": "qvtv1-IfeKXM"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -679,7 +680,7 @@
         "id": "uK9Xg60socwR",
         "outputId": "078f9825-0ac5-4628-fac3-9ac557e4146a"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -733,7 +734,7 @@
       "metadata": {
         "id": "6b1vQn7CQsy4"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -764,7 +765,7 @@
       "metadata": {
         "id": "soMbSvlrQu0h"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -792,7 +793,7 @@
         "id": "fB_mHTiPQwei",
         "outputId": "653ef502-96c8-4c11-c2a4-c0d55b37539f"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -820,7 +821,7 @@
         "id": "tf_6NShDphMS",
         "outputId": "a436b5e4-faee-44d0-91fc-26e10f93864e"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -938,7 +939,7 @@
       "metadata": {
         "id": "QeeS19dMQ3ph"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -959,7 +960,7 @@
         "id": "WS0OOWv9Q4vp",
         "outputId": "e6fa3f0d-b6f6-4275-8838-d79f1aa3731e"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1051,7 +1052,7 @@
         "id": "Oxc-vb-EwGx5",
         "outputId": "ad0ea0a3-d41b-434a-9fed-3ed69330eb52"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1084,7 +1085,7 @@
         "id": "M1hptMK3wRKp",
         "outputId": "570641ba-c844-4ece-9cff-e97ed54dab36"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1132,7 +1133,7 @@
         "id": "2JUotlvDRFSp",
         "outputId": "473325a2-5421-4cb8-fa6b-e0c76ee854a8"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1164,7 +1165,7 @@
         "id": "G7On0LroRMzO",
         "outputId": "edae9a9e-19fc-44e9-f3c8-d693ffd13fe6"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1207,7 +1208,7 @@
         "id": "XtDVbR9gyAbX",
         "outputId": "ba823d03-ddcd-475d-a997-cb96ae2d4b6b"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1242,7 +1243,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## A Word on overfitting"
+        "## A word on overfitting"
       ],
       "metadata": {
         "id": "LHDJzdeoJDZJ"
@@ -1251,7 +1252,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "- In [A Word on Overfitting](https://github.com/Ali-Mhrez/Stance-Detection/blob/main/SD_MLP.ipynb), we argue that the performance on the validation set stopped improving due to limits in the dataset, thus it is not clear how much we should attribute the learning curves to the overfitting versus model struggling to capture the underlying concepts of the 'disagree' and 'discuss' classes."
+        "- Needs further investigation (Next step).\n",
+        "- In [A first thought on overfitting](https://github.com/Ali-Mhrez/Stance-Detection/blob/main/SD_MLP.ipynb), we argue that the performance on the validation set stopped improving due to limits in the dataset, thus it is not clear how much we should attribute the learning curves to the overfitting versus model struggling to capture the underlying concepts of the 'disagree' and 'discuss' classes."
       ],
       "metadata": {
         "id": "WgJW8zGlJHw4"
