docs: update on bilstmcnn overfitting discussion

--- a/SD_BiLSTMCNN.ipynb
+++ b/SD_BiLSTMCNN.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "gpuType": "T4"
+      "gpuType": "T4",
+      "toc_visible": true
     },
     "kernelspec": {
       "name": "python3",
@@ -52,7 +53,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "uTVzv6NOPIow",
         "colab": {
@@ -99,7 +100,7 @@
       "metadata": {
         "id": "MXI8hIO7RXdp"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -134,7 +135,7 @@
         },
         "outputId": "a09ec49c-807b-428b-e274-a400c8b14367"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -195,7 +196,7 @@
         "id": "UHvBzBq3Pv7O",
         "outputId": "c01c768d-2561-4ed2-cd11-268fe6f9205d"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -232,7 +233,7 @@
         "id": "1-cQ_grOTW2L",
         "outputId": "85464e62-2172-45aa-9242-579d3e2456c9"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -317,7 +318,7 @@
       "metadata": {
         "id": "XnIRNj4uUJEw"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -350,7 +351,7 @@
       "metadata": {
         "id": "GMzoQNPHQp-F"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -376,7 +377,7 @@
         "id": "zSPVkWNSl74q",
         "outputId": "2b43149e-812e-48ab-af69-5be316bb0c2a"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -419,7 +420,7 @@
         },
         "outputId": "c5589fa4-f5bf-4e2c-9cb6-84b9c7ea8519"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -466,7 +467,7 @@
         "id": "RUv2QkVfPxmH",
         "outputId": "51c6d10c-01c2-4393-d74a-cef03670c64c"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -518,7 +519,7 @@
       "metadata": {
         "id": "iqA6lTkrQdu3"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -554,7 +555,7 @@
         "id": "Umm6q1LWQmae",
         "outputId": "2327b7e6-38cb-425b-d4da-8d2fe1e32d52"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -587,7 +588,7 @@
         "id": "uIMGs7g4r9Mw",
         "outputId": "b178bb36-ba28-43f6-8f8f-2837c96f48c6"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -670,7 +671,7 @@
       "metadata": {
         "id": "Yrox_SSDiJyl"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -690,7 +691,7 @@
       "metadata": {
         "id": "TSO0rSyQQovs"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -712,7 +713,7 @@
       "metadata": {
         "id": "qvtv1-IfeKXM"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -738,7 +739,7 @@
         "id": "uK9Xg60socwR",
         "outputId": "8650a51f-3150-4ff7-b828-05abaf13d9f5"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -796,7 +797,7 @@
       "metadata": {
         "id": "6b1vQn7CQsy4"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -826,7 +827,7 @@
       "metadata": {
         "id": "soMbSvlrQu0h"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -862,7 +863,7 @@
         "id": "fB_mHTiPQwei",
         "outputId": "e2bbc8c2-5d78-4d70-ce8a-0bda961e90ec"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -890,7 +891,7 @@
         "id": "tf_6NShDphMS",
         "outputId": "ff37cf18-c343-44d9-81d5-d86352cfac71"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1046,7 +1047,7 @@
       "metadata": {
         "id": "QeeS19dMQ3ph"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1067,7 +1068,7 @@
         "id": "WS0OOWv9Q4vp",
         "outputId": "655de609-7cf0-4b07-adea-1259bca5d684"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1149,7 +1150,7 @@
         "id": "Oxc-vb-EwGx5",
         "outputId": "167c336a-2da3-4988-92c3-dbd5642c4e2e"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1182,7 +1183,7 @@
         "id": "M1hptMK3wRKp",
         "outputId": "3690c1d5-88fd-411a-c370-235cedaf458a"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1221,7 +1222,7 @@
         "id": "2JUotlvDRFSp",
         "outputId": "b1daade9-08a1-410f-d86c-0687407a1158"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1253,7 +1254,7 @@
         "id": "G7On0LroRMzO",
         "outputId": "484636ee-a289-4048-aa1e-f219d8cd7a73"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1296,7 +1297,7 @@
         "id": "XtDVbR9gyAbX",
         "outputId": "2a5ed768-5df9-4113-dc59-55e6a042ec6f"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1340,7 +1341,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "- In [A Word on overfitting](https://github.com/Ali-Mhrez/Stance-Detection/blob/main/SD_MLP.ipynb), we argue that the performance on the validation set stopped improving due to limits in the dataset, thus it is not clear how much we should attribute the learning curves to overfitting versus model struggling to capture the underlying concepts of the 'disagree' and 'discuss' classes."
+        "- Needs further investigation (next step).\n",
+        "- In [A first thought on overfitting](https://github.com/Ali-Mhrez/Stance-Detection/blob/main/SD_MLP.ipynb), we argue that the performance on the validation set stopped improving due to limits in the dataset, thus it is not clear how much we should attribute the learning curves to overfitting versus model struggling to capture the underlying concepts of the 'disagree' and 'discuss' classes."
       ],
       "metadata": {
         "id": "a-nlbr4KM6Gd"
