docs: update on bilstm cnn ensemble overfitting discussion

--- a/SD_BiLSTM_CNN_Ensemble.ipynb
+++ b/SD_BiLSTM_CNN_Ensemble.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "gpuType": "T4"
+      "gpuType": "T4",
+      "toc_visible": true
     },
     "kernelspec": {
       "name": "python3",
@@ -76,7 +77,7 @@
       "metadata": {
         "id": "MXI8hIO7RXdp"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -137,7 +138,7 @@
         "id": "UHvBzBq3Pv7O",
         "outputId": "0169f269-7ffa-40c2-d598-c9cf0c023ed0"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -174,7 +175,7 @@
         "id": "1-cQ_grOTW2L",
         "outputId": "138fc4f9-03ce-44cd-a8c1-df0af38ce7d4"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -259,7 +260,7 @@
       "metadata": {
         "id": "XnIRNj4uUJEw"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -292,7 +293,7 @@
       "metadata": {
         "id": "GMzoQNPHQp-F"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -318,7 +319,7 @@
         "id": "zSPVkWNSl74q",
         "outputId": "9cc48ee1-fc9a-4acc-aa61-968bb38a53db"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -382,7 +383,7 @@
         "id": "RUv2QkVfPxmH",
         "outputId": "8460b306-30c0-4c4e-f4e8-fa6d96c665df"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -434,7 +435,7 @@
       "metadata": {
         "id": "iqA6lTkrQdu3"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -470,7 +471,7 @@
         "id": "Umm6q1LWQmae",
         "outputId": "b7548541-f70c-4f46-b71d-bd0cc9c34911"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -503,7 +504,7 @@
         "id": "uIMGs7g4r9Mw",
         "outputId": "f9642580-5b80-4d58-b40a-e94933c7f530"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -586,7 +587,7 @@
       "metadata": {
         "id": "Yrox_SSDiJyl"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -606,7 +607,7 @@
       "metadata": {
         "id": "TSO0rSyQQovs"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -628,7 +629,7 @@
       "metadata": {
         "id": "qvtv1-IfeKXM"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -654,7 +655,7 @@
         "id": "uK9Xg60socwR",
         "outputId": "ed9b3a6e-e541-486f-faad-3e28c8456b95"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -724,7 +725,7 @@
       "metadata": {
         "id": "6b1vQn7CQsy4"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -755,7 +756,7 @@
       "metadata": {
         "id": "soMbSvlrQu0h"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -771,7 +772,7 @@
       "metadata": {
         "id": "TsofePciaDri"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -817,7 +818,7 @@
         "id": "fB_mHTiPQwei",
         "outputId": "9a476f92-bae5-4cf5-c3e4-e45de25149ea"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -845,7 +846,7 @@
         "id": "tf_6NShDphMS",
         "outputId": "cef0cefb-0f2a-442b-92bb-7f5ae24f355b"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1027,7 +1028,7 @@
       "metadata": {
         "id": "QeeS19dMQ3ph"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1048,7 +1049,7 @@
         "id": "WS0OOWv9Q4vp",
         "outputId": "b7649068-190d-4416-de3f-04c787b39688"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1110,7 +1111,7 @@
         "id": "Oxc-vb-EwGx5",
         "outputId": "80139310-7d57-420e-fa8e-6fd13e0b2605"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1143,7 +1144,7 @@
         "id": "M1hptMK3wRKp",
         "outputId": "0e9d58ed-6a40-42d7-8bc5-18a8d8e418df"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1182,7 +1183,7 @@
         "id": "2JUotlvDRFSp",
         "outputId": "1977eed8-4860-4dbd-eef4-8d62f552d8ed"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1214,7 +1215,7 @@
         "id": "G7On0LroRMzO",
         "outputId": "f8f04d94-fdf3-440d-f8ef-b2f4826943a4"
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1257,7 +1258,7 @@
         "id": "XtDVbR9gyAbX",
         "outputId": "2ec6442a-2e6e-46b3-a26d-6adb15b0829f"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1292,7 +1293,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## A Word on overfitting"
+        "## A word on overfitting"
       ],
       "metadata": {
         "id": "u19eLInmM4Q1"
@@ -1301,7 +1302,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "- In [A Word on overfitting](https://github.com/Ali-Mhrez/Stance-Detection/blob/main/SD_MLP.ipynb), we argue that the performance on the validation set stopped improving due to limits in the dataset, thus it is not clear how much we should attribute the learning curves to overfitting versus model struggling to capture the underlying concepts of the 'disagree' and 'discuss' classes."
+        "- Needs further investigation (next step).\n",
+        "- In [A first thought on overfitting](https://github.com/Ali-Mhrez/Stance-Detection/blob/main/SD_MLP.ipynb), we argue that the performance on the validation set stopped improving due to limits in the dataset, thus it is not clear how much we should attribute the learning curves to overfitting versus model struggling to capture the underlying concepts of the 'disagree' and 'discuss' classes."
       ],
       "metadata": {
         "id": "a-nlbr4KM6Gd"
