docs: update on cnn overfitting discussion

--- a/SD_CNN.ipynb
+++ b/SD_CNN.ipynb
@@ -80,7 +80,7 @@
       "metadata": {
         "id": "MXI8hIO7RXdp"
       },
-      "execution_count": 93,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -141,7 +141,7 @@
         "id": "UHvBzBq3Pv7O",
         "outputId": "f53e8f2b-1110-46c7-969d-61450add6966"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -178,7 +178,7 @@
         "id": "1-cQ_grOTW2L",
         "outputId": "98621134-a00b-4fff-adf3-7fa71a653df0"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -263,7 +263,7 @@
       "metadata": {
         "id": "XnIRNj4uUJEw"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -296,7 +296,7 @@
       "metadata": {
         "id": "GMzoQNPHQp-F"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -322,7 +322,7 @@
         "id": "zSPVkWNSl74q",
         "outputId": "fbeb6e55-1228-4d4e-d638-8bc10d615c96"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -386,7 +386,7 @@
         "id": "RUv2QkVfPxmH",
         "outputId": "c6b8c03c-ee9f-4fc6-e393-59401bea8c24"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -438,7 +438,7 @@
       "metadata": {
         "id": "iqA6lTkrQdu3"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -474,7 +474,7 @@
         "id": "Umm6q1LWQmae",
         "outputId": "b6015d62-bd24-44f2-8e22-cf6072b0aa59"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -507,7 +507,7 @@
         "id": "uIMGs7g4r9Mw",
         "outputId": "633f671f-68c0-46d9-c36c-995f5281cd72"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -615,7 +615,7 @@
       "metadata": {
         "id": "Yrox_SSDiJyl"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -635,7 +635,7 @@
       "metadata": {
         "id": "TSO0rSyQQovs"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -657,7 +657,7 @@
       "metadata": {
         "id": "qvtv1-IfeKXM"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -683,7 +683,7 @@
         "id": "uK9Xg60socwR",
         "outputId": "e52ef204-b82b-4c37-ce77-ef50d22835fe"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -753,7 +753,7 @@
       "metadata": {
         "id": "6b1vQn7CQsy4"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -784,7 +784,7 @@
       "metadata": {
         "id": "soMbSvlrQu0h"
       },
-      "execution_count": 134,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -818,7 +818,7 @@
         "id": "fB_mHTiPQwei",
         "outputId": "8161e945-4867-4ee5-d8ce-903c7725121c"
       },
-      "execution_count": 135,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -846,7 +846,7 @@
         "id": "tf_6NShDphMS",
         "outputId": "8b04cda8-26b3-4acd-e077-fa78227bba8f"
       },
-      "execution_count": 147,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1009,7 +1009,7 @@
       "metadata": {
         "id": "QeeS19dMQ3ph"
       },
-      "execution_count": 137,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1030,7 +1030,7 @@
         "id": "WS0OOWv9Q4vp",
         "outputId": "c27822da-0481-4d8e-920a-5f0439360917"
       },
-      "execution_count": 138,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1088,7 +1088,7 @@
         "id": "Oxc-vb-EwGx5",
         "outputId": "b66975be-c8f2-4ef1-95ee-b497e76056e8"
       },
-      "execution_count": 139,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1121,7 +1121,7 @@
         "id": "M1hptMK3wRKp",
         "outputId": "39877d4e-2cfb-468d-89aa-c9515e46cfab"
       },
-      "execution_count": 140,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1160,7 +1160,7 @@
         "id": "2JUotlvDRFSp",
         "outputId": "5471222b-b223-43b3-b116-c858a1e541fb"
       },
-      "execution_count": 141,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1192,7 +1192,7 @@
         "id": "G7On0LroRMzO",
         "outputId": "fb70001e-7828-4fc5-f323-f489bd5210a0"
       },
-      "execution_count": 142,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1237,7 +1237,7 @@
         "id": "XtDVbR9gyAbX",
         "outputId": "88d6a57f-27c5-4a0a-cd34-c9be2246ae32"
       },
-      "execution_count": 146,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1267,6 +1267,25 @@
       ],
       "metadata": {
         "id": "gWqcM1hxzjMq"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## A word on overfitting"
+      ],
+      "metadata": {
+        "id": "wDHz2P_gWZDs"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "- Needs further investigation (next step).\n",
+        "- In [A first thought on overfitting](https://github.com/Ali-Mhrez/Stance-Detection/blob/main/SD_MLP.ipynb), we argue that the performance on the validation set stopped improving due to limits in the dataset, thus it is not clear how much we should attribute the learning curves to overfitting versus model struggling to capture the underlying concepts of the 'disagree' and 'discuss' classes."
+      ],
+      "metadata": {
+        "id": "HmWIXqgzWbJM"
       }
     }
   ]
