style: SD_Dummy (change the format of the output)

--- a/SD_Dummy.ipynb
+++ b/SD_Dummy.ipynb
@@ -53,7 +53,7 @@
       "metadata": {
         "id": "NRmuJrPxenqg"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -111,9 +111,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XI2al79OfLXO",
-        "outputId": "f810d95b-d505-4252-cf3d-0313a95bb0ba"
+        "outputId": "14ea798d-2fbf-4a6d-d6e2-eaf29154f7da"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -148,9 +148,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "2gIZNN5KfPcm",
-        "outputId": "b70bbbae-3b72-4df1-cb6b-5408764564bb"
+        "outputId": "9d893bc9-1dd7-4668-99ab-bfe8c347b3e1"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -186,50 +186,108 @@
       "source": [
         "def random_classifier(labels, no_trials = 5):\n",
         "\n",
-        "  accuracy, mf1score, f1score = 0, 0, 0\n",
         "  no_classes = len(np.unique(labels))\n",
-        "\n",
+        "  accuracy, f1score, mf1score = [], [], []\n",
         "  for _ in range(no_trials):\n",
         "    predictions = np.array([np.random.randint(0, no_classes) for _ in range(len(labels))])\n",
         "\n",
-        "    accuracy = np.sum(predictions == np.array(labels)) / len(labels) * no_trials\n",
+        "    acc = np.sum(predictions == np.array(labels)) / len(labels)\n",
+        "    accuracy.append(acc)\n",
         "\n",
-        "    f1score += f1_score(labels, predictions, average=None) / no_trials\n",
-        "    mf1score += f1_score(labels, predictions, average='macro') / no_trials\n",
+        "    f1 = f1_score(labels, predictions, average=None)\n",
+        "    f1score.append(f1)\n",
+        "\n",
+        "    mf1 = f1_score(labels, predictions, average='macro')\n",
+        "    mf1score.append(mf1)\n",
         "\n",
         "  return accuracy, f1score, mf1score"
       ],
       "metadata": {
         "id": "kqJ1TE3teW30"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
+        "val_labels = [stance_to_int[stance] for stance in raw_val.stances]\n",
+        "val_accuracy, val_f1score, val_mf1score= random_classifier(val_labels)\n",
+        "print(\"Validation Resutls:\")\n",
+        "print(\"=====================\")\n",
+        "print(f\"Mean Accuracy: {np.mean(val_accuracy):.3f}\")\n",
+        "agree, disagree, discuss, unrelated = np.mean(val_f1score, axis=0)\n",
+        "print(\"Mean Per Class F1 scores:\")\n",
+        "print(f\"Agree   : {agree:.3f}\")\n",
+        "print(f\"Disagree: {disagree:.3f}\")\n",
+        "print(f\"Discuss : {discuss:.3f}\")\n",
+        "print(f\"Unrelated: {unrelated:.3f}\")\n",
+        "print(f\"Mean Macro F1 scores: {np.mean(val_mf1score):.3f}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "BRde_0unuatQ",
+        "outputId": "c079b8c6-aa53-451b-c50a-92f9b8d77ff9"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Validation Resutls:\n",
+            "=====================\n",
+            "Mean Accuracy: 0.239\n",
+            "Mean Per Class F1 scores:\n",
+            "Agree   : 0.220\n",
+            "Disagree: 0.169\n",
+            "Discuss : 0.154\n",
+            "Unrelated: 0.327\n",
+            "Mean Macro F1 scores: 0.218\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "test_labels = [stance_to_int[stance] for stance in raw_test.stances]\n",
-        "accuracy, f1score, mf1score= random_classifier(test_labels, 1)\n",
-        "print(\"Accuracy                   :\", accuracy)\n",
-        "print(\"F1 score                   :\", f1score)\n",
-        "print(\"Macro F1 score             :\", mf1score)"
+        "test_accuracy, test_f1score, test_mf1score= random_classifier(test_labels)\n",
+        "print(\"Testing Resutls:\")\n",
+        "print(\"=====================\")\n",
+        "print(f\"Mean Accuracy: {np.mean(test_accuracy):.3f}\")\n",
+        "agree, disagree, discuss, unrelated = np.mean(test_f1score, axis=0)\n",
+        "print(\"Mean Per Class F1 scores:\")\n",
+        "print(f\"Agree   : {agree:.3f}\")\n",
+        "print(f\"Disagree: {disagree:.3f}\")\n",
+        "print(f\"Discuss : {discuss:.3f}\")\n",
+        "print(f\"Unrelated: {unrelated:.3f}\")\n",
+        "print(f\"Mean Macro F1 scores: {np.mean(test_mf1score):.3f}\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "-yDhKoYOeaV_",
-        "outputId": "dd0c1c77-974c-4d43-c4e5-475a13fa1a05"
+        "outputId": "d3255e3a-f0bd-4c59-f647-29298091a01e"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Accuracy                   : 0.2693498452012384\n",
-            "F1 score                   : [0.25705329 0.1888412  0.17167382 0.35897436]\n",
-            "Macro F1 score             : 0.24413566799240916\n"
+            "Testing Resutls:\n",
+            "=====================\n",
+            "Mean Accuracy: 0.248\n",
+            "Mean Per Class F1 scores:\n",
+            "Agree   : 0.230\n",
+            "Disagree: 0.156\n",
+            "Discuss : 0.160\n",
+            "Unrelated: 0.336\n",
+            "Mean Macro F1 scores: 0.221\n"
           ]
         }
       ]
@@ -268,34 +326,89 @@
       "metadata": {
         "id": "MXI8hIO7RXdp"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
+        "val_labels = [stance_to_int[stance] for stance in raw_val.stances]\n",
+        "val_accuracy, val_f1score, val_mf1score= majority_classifier(val_labels, 'unrelated')\n",
+        "print(\"Validation Resutls:\")\n",
+        "print(\"=====================\")\n",
+        "print(f\"Mean Accuracy: {val_accuracy:.3f}\")\n",
+        "agree, disagree, discuss, unrelated = val_f1score\n",
+        "print(\"Mean Per Class F1 scores:\")\n",
+        "print(f\"Agree   : {agree:.3f}\")\n",
+        "print(f\"Disagree: {disagree:.3f}\")\n",
+        "print(f\"Discuss : {discuss:.3f}\")\n",
+        "print(f\"Unrelated: {unrelated:.3f}\")\n",
+        "print(f\"Mean Macro F1 scores: {val_mf1score:.3f}\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "vG_MWeS5w28N",
+        "outputId": "03832262-78a3-4d30-ed6a-7e158750c78d"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Validation Resutls:\n",
+            "=====================\n",
+            "Mean Accuracy: 0.517\n",
+            "Mean Per Class F1 scores:\n",
+            "Agree   : 0.000\n",
+            "Disagree: 0.000\n",
+            "Discuss : 0.000\n",
+            "Unrelated: 0.681\n",
+            "Mean Macro F1 scores: 0.170\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "test_labels = [stance_to_int[stance] for stance in raw_test.stances]\n",
-        "accuracy, f1score, mf1score = majority_classifier(test_labels, 'unrelated')\n",
-        "print(\"Accuracy                   :\", accuracy)\n",
-        "print(\"F1 score                   :\", f1score)\n",
-        "print(\"Macro F1 score             :\", mf1score)"
+        "test_accuracy, test_f1score, test_mf1score = majority_classifier(test_labels, 'unrelated')\n",
+        "print(\"Testing Resutls:\")\n",
+        "print(\"=====================\")\n",
+        "print(f\"Mean Accuracy: {test_accuracy:.3f}\")\n",
+        "agree, disagree, discuss, unrelated = test_f1score\n",
+        "print(\"Mean Per Class F1 scores:\")\n",
+        "print(f\"Agree   : {agree:.3f}\")\n",
+        "print(f\"Disagree: {disagree:.3f}\")\n",
+        "print(f\"Discuss : {discuss:.3f}\")\n",
+        "print(f\"Unrelated: {unrelated:.3f}\")\n",
+        "print(f\"Mean Macro F1 scores: {test_mf1score:.3f}\")"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "pgtSQ6yQgMoT",
-        "outputId": "740e6784-27c3-46a3-842b-08d6e66cf5f6"
+        "outputId": "a56bfed0-24d2-46db-f828-227a67ad9beb"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Accuracy                   : 0.5541795665634675\n",
-            "F1 score                   : [0.         0.         0.         0.71314741]\n",
-            "Macro F1 score             : 0.17828685258964144\n"
+            "Testing Resutls:\n",
+            "=====================\n",
+            "Mean Accuracy: 0.554\n",
+            "Mean Per Class F1 scores:\n",
+            "Agree   : 0.000\n",
+            "Disagree: 0.000\n",
+            "Discuss : 0.000\n",
+            "Unrelated: 0.713\n",
+            "Mean Macro F1 scores: 0.178\n"
           ]
         }
       ]
